# spikegen

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  charter.md  logo-prompt.md
examples/: generate.py  population.py
src/spikegen/: __init__.py  _numpy.py  _validate.py  population.py  processes.py
tests/: test_bernoulli_jitter.py  test_numpy.py  test_population.py  test_processes.py  test_properties.py
